# byte50

./: LICENSE  README.md  if-statement.py
Datatypes/: 1  a.out  char.c  limitation.c  shift-overlaping.c
LFS/: pg_new.c  pgm.c  pgm.c.orig
algo/: CMakeLists.txt  a.out  circular.c  hash.c  infix.c  min_max.c  que.c  sum.c
cmake/: .gitignore  CMakeLists.txt  configure.sh  main.c  run.sh
cmake/lib/: CMakeLists.txt  add.c  header.h
cmake/simple_cmake/: CMakeLists.txt  Makefile
cmaketut/: CMakeCache.txt  CMakeList.txt  CMakeLists.txt  add.c  main.c
enum/: basic_enum.c
examples/: simple.c
linux/: a.out  qsort-inbuilt-func.c  random-number.c  test-case.txt
linux/directory-access/: a.out  link.c  new_path.txt  readdir.c  scaning-directories.c
linux/files_access/: abs.c  printing-methods.c
linux/linux_temp_space/: hardlink_target  softlink
linux/string-function-memory-syscalls/: memcpy-vs-memmov.c  string-functions-all.c  strtok.c
make-files/simple_cmake/: CMakeCache.txt  a.out  cmake_install.cmake
meson/: meson.build
meson/builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  final_exe
meson/builddir/meson-info/: intro-buildsystem_files.json  intro-projectinfo.json  intro-targets.json  meson-info.json
meson/builddir/meson-logs/: meson-log.txt
meson/builddir/meson-private/: coredata.dat.prev
objective_c/: a.out  basic_pointers.c  bitfield-size.c  call_back_using-struct.c  confrm_fun-decr.c  fscanf.c  function_pointer.c  merge-sort.c  normal-input.c  pascal_pattern.c  patten.c  pointer_to_an_array.c  test-case.txt
pointers/: a.out  array-of-pointers.c  callback-pointer.c  function-pointer.c  function_poi-call.c  function_poi.c  pointer-to-array.c
python/: array-runtime.py  array.py  cmd-line-args-parser.py  cmd-line.py  if-statement.py  import.py  pattern.py
python/arrays/: array_numpy.py
python/functions/: arguments_python.py  function_function.py  functions.py
python/strings/: strings.py  total_howmany_words.py
reference/linux/Linux-implement/: dinding_sem.c  ls implements in c  monitor.c  read.c
reference/linux/directory-access/: access.c  access.i  dirctory-files_access.c  file_stat_fstat_linking.c  stat-and_f-fstat.c  temperory_file_creation.c
reference/linux/dirent-master/examples/: a.out  scandir.c
reference/linux/files_access/: div-function.c  files-fprintf.c  fscanf.c
reference/linux/ipc/plotter-ipc/: externals.h  plot  plot.c  plotter.c
reference/linux/process_control/: a.out  process_control.c
reference/linux/process_control/exec-family_functions/: README  a.out  execel_imp.c  execle_imp.c  execlp_imp.c  execv_imp.c  execvp_imp.c  system.c
reference/linux/searchin&sorting-algorithms/: binarysearch-inbuild.c  preprocessor.c
reference/linux/string-function-memory-syscalls/: string-functions.c
reference/linux/time-functions/: a.out  print_time.c  timer.c
reference/objective_c/: .pattern.c.swp  a.out  array-of-pointers.c  basic-question.c  bitfield-size.c  call_back_fun.c  dummy.c  function_returning_another_fun_add.c  pre.i  print-without-increment.c  variable_number_of_arguments.c
reference/python/arrays/: 2d_3dArray.py  mathematical_op.py
reference/python/cmd-line_arguments/: cmd-line-args-parser.py
reference/python/dictionary/: dict.py
reference/python/functions/: arguments_python.py  global_local_variable.py  passing_froup_elements_fun.py  prime.py  recursive_functions.py  return.py
reference/python/lambda_function/: gneraters.py  lamda.py
reference/python/lists/: employee.py  lists.py
reference/python/loops/: asset.py  for-for_elese.py
reference/python/tuples/: tuples.py  tuples_del_merge.py
strings/: a.out  string-to-int.c
structure/: a.out  basic_struct.c  structure.c
typedef/: a.out  def.c  defined.c  ifndef.c  macro-continuation.c  predef.c  tokenpasting.c  typedef.c
variable_argu/: myprintf.c  var-main.c  var_no.c  variable.c
(+3 files in other folders)
